2015-02-28 Franz Holzinger <franz@ttproducts.de>
	* security fix: do not allow the edit command if the logged in FE user uid does not equal the hidden field FE[fe_users][uid]

2014-12-27 Franz Holzinger <franz@ttproducts.de>
	* incorporate modifications until sr_feuser_register 3.1.3

2014-08-17 Franz Holzinger <franz@ttproducts.de>
	* changes in the hook functions
	* support for improved voucher codes of voucher extension 0.2.0
	* make authorisation services configurable authServiceClass
	* add table sys_agency_fe_users_limit_fe_groups to store a FE user specific start- and endtime for an assigned FE user group (added by the voucher extension).
	* add a scheduler task to check if a FE user must be removed from a FE group membership (voucher extension)

2014-03-06 Franz Holzinger <franz@ttproducts.de>
	* fix bug #50838
	* fix bug with not shown Direct Mail categories
	* modify module_sys_dmail_category in the TCE to show all categories
	for all countries

2014-02-15 Franz Holzinger <franz@ttproducts.de>
	* New feature: alphaSpecials. Allow usernames with umlauts.
	* New feature: send an email to recreate a forgotten password
	* support alternative for the removed fe_admin_fieldList in TYPO3 6.2
	* change all class names from prefix tx-agency into agency
	* allow the empty default security level FE oginSecurityLevel
	* fix bug: wrong conf array in tx_agency_data
	* fix bugs in invitation process
	* fix bug: fix CSS class names

2013-12-28 Franz Holzinger <franz@ttproducts.de>
	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission

2013-11-19 Franz Holzinger <franz@ttproducts.de>
	* fix bug #53741: remove apostrophe

2013-11-16 Franz Holzinger <franz@ttproducts.de>
	* bug fix to autologin
	* add new subpart ###TEMPLATE_SETFIXED_LOGIN_FAILED###

2013-09-24 Franz Holzinger <franz@ttproducts.de>
	* new setup captcha for support of diversal captcha extensions
	* enhancements to some hook functions

2013-08-05 Franz Holzinger <franz@ttproducts.de>