@@ -1,3 +1,7 @@
+2015-04-21 Franz Holzinger <franz@ttproducts.de>
+	* bug fix: wrong call for hook registrationProcess_beforeSaveDelete
+	* bug fix: the original internal array must never be changeable
+
 2015-02-28 Franz Holzinger <franz@ttproducts.de>
 	* security fix: do not allow the edit command if the logged in FE user uid does not equal the hidden field FE[fe_users][uid]
 
